apps/argocd/manifests/tlsroute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: gateway.mgmt.sholdee.net
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: tls
  - name: external-gateway
    namespace: default
    sectionName: tls
  hostnames:
  - "argocd.sholdee.net"
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 443
