apps/argocd/manifests/netpol.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-server
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: argocd-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: external-gateway
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8083"
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-application-controller
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: application-controller
      app.kubernetes.io/name: argocd-application-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8082"
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: repo-server
      app.kubernetes.io/name: argocd-repo-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: argocd
            app.kubernetes.io/instance: argocd
      toPorts:
        - ports:
            - port: "8081"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8084"
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-redis
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: redis
      app.kubernetes.io/name: argocd-redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: argocd
            app.kubernetes.io/instance: argocd
      toPorts:
        - ports:
            - port: "6379"
